<resources>
    <string name="app_name">MapTrips</string>
    <string name="activity_login_sign_in_btn">Sign In</string>
    <string name="activity_login_sign_up_btn">Create A New Account</string>
    <string name="activity_signup_name">Name *</string>
    <string name="activity_signup_email">E-Mail *</string>
    <string name="activity_signup_username_sub1">Please enter USERNAME to use as ID.</string>
    <string name="activity_signup_username_sub2">USERNAME must be at least 6 characters and less than 15 characters</string>
    <string name="activity_signup_password_sub1">Password must be at least 8 characters and less than 17 characters</string>
    <string name="activity_signup_field_sub">* must be entered</string>
    <string name="activity_signup_info_agr_chkbox">I agree to collect and use personal information.</string>
    <string name="activity_signup_terms_agr_chkbox">I agree to the terms and conditions.</string>
    <string name="activity_signup_username_verifying">Verifying..</string>
    <string name="activity_signup_password_sub2">Please enter the same password as above.</string>
    <string name="activity_signup_name_sub">Please enter a valid name.</string>
    <string name="activity_signup_email_sub">Please enter a valid email address.</string>
    <string name="activity_signup_username_verified">Is verified.</string>
    <string name="activity_signup_username_dup">Duplicated.</string>
    <string name="activity_signup_reg_result_true">Registration completed.</string>
    <string name="activity_signup_reg_result_false">Registration Failed.</string>
    <string name="activity_login_forgot">Forgot?</string>
    <string name="activity_login_sign_in_fail">Sign in failed. Please check USERNAME and PASSWORD</string>
    <string name="activity_signup_cancel">Cancel</string>
    <string name="bottom_feed">Feed</string>
    <string name="bottom_search">Search</string>
    <string name="bottom_new">Write</string>
    <string name="bottom_folder">Folder</string>
    <string name="bottom_mypage">My</string>
    <string name="activity_add_post_commit">Commit</string>
    <string name="activity_add_post_title">Title</string>
    <string name="activity_add_post_text">Text</string>
    <string name="activity_add_post_upload_err">Failed to upload. Try Later.</string>
    <string name="activity_add_post_upload_complete">Complete.</string>
    <string name="activity_mypage_tab_posts">Posts</string>
    <string name="activity_mypage_tab_favorites">Favorites</string>
    <string name="activity_mypage_follower">Followers</string>
    <string name="activity_mypage_following">Following</string>
    <string name="activity_mypage_posts">Posts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity_add_post_date_year">-</string>
    <string name="activity_add_post_date_month">-</string>
    <string name="activity_add_post_date_day"></string>
    <string name="activity_add_post_date_metadata">Date form Picture.</string>
    <string name="activity_add_post_date_sub">Touch to change date.</string>
    <string name="activity_folder_tab_map">Maps</string>
    <string name="activity_folder_tab_lists">Lists</string>
    <string name="activity_main_new_menu_newpost">New Post</string>
    <string name="activity_main_new_menu_newfolder">New Folder</string>
    <string name="activity_post_menu_delete">Delete</string>
    <string name="activity_post_menu_modify">Modify</string>
    <string name="activity_post_menu_alert_title">Sure to delete?</string>
    <string name="activity_post_menu_alert_sub">sure?</string>
    <string name="activity_post_menu_alert_btn_cancle">Cancel</string>
    <string name="activity_post_menu_alert_btn_confirm">Delete</string>
    <string name="activity_add_post_place_sub">Add place</string>
    <string name="activity_add_post_place_metadata">(Beta) find place from metadata</string>
    <string name="activity_add_post_place_btn">ex) Hanshin University</string>
    <string name="activity_add_post_folder_btn">Not selected.</string>
    <string name="activity_add_post_folder_sub">select or add folder.</string>
    <string name="activity_add_post_folder_title">Select folder</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>