<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_rad_corner_sign"
            android:ems="10"
            android:hint="@string/activity_signup_name"
            android:inputType="text"
            android:padding="15dp"
            android:selectAllOnFocus="true"
            android:visibility="visible" />

        <TextView
            android:id="@+id/text_name_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/activity_signup_name_sub"
            android:textColor="@color/design_default_color_error"
            android:visibility="gone" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_rad_corner_sign"
            android:ems="10"
            android:hint="@string/activity_signup_email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:selectAllOnFocus="true"
            android:visibility="visible" />

        <TextView
            android:id="@+id/text_email_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/activity_signup_email_sub"
            android:textColor="@color/design_default_color_error"
            android:visibility="gone" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>