<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_post_bottom_sheeet"
    android:orientation="vertical"
    android:padding="25dp"
    app:behavior_hideable="false"
    app:behavior_peekHeight="300dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_alert_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_post_menu_alert_title"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="10pt" />

        <TextView
            android:id="@+id/text_alert_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/activity_post_menu_alert_sub"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="8pt" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/button_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="20dp"
                android:text="@string/activity_post_menu_alert_btn_confirm"
                android:textColor="@color/red_100"
                android:textSize="@dimen/activity_post_menu_btn_textsize"
                android:background="@drawable/btn_post_menu_alert"/>

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/activity_post_menu_alert_btn_cancle"
                android:textSize="@dimen/activity_post_menu_btn_textsize"
                android:background="@drawable/btn_post_menu_alert"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>