<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AddPostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_header"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="MapTrips"
                android:textAllCaps="false"
                android:textColor="@color/app_main_color"
                android:textSize="@dimen/app_header_fontsize"
                android:visibility="visible" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/button_upload"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:minWidth="60dp"
                android:padding="0dp"
                android:text="@string/activity_add_post_commit"
                android:textSize="8pt" />
            <!-- 나중에 버튼 클릭 이펙트 만들어주세요 -->

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/Button_addimage"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_margin="0dp"
                    android:background="@drawable/btn_add_post_add_img"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/content_default_padding">

                    <EditText
                        android:id="@+id/et_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/edittext_default_padding"
                        android:background="@drawable/edit_rad_corner_light"
                        android:ems="10"
                        android:hint="@string/activity_add_post_title"
                        android:inputType="text"
                        android:maxLength="30"
                        android:maxLines="1"
                        android:padding="@dimen/edittext_padding_default" />

                    <EditText
                        android:id="@+id/et_text"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:layout_marginBottom="@dimen/edittext_default_padding"
                        android:background="@drawable/edit_rad_corner_light"
                        android:ems="10"
                        android:hint="@string/activity_add_post_text"
                        android:inputType="textMultiLine"
                        android:maxLength="130"
                        android:maxLines="5"
                        android:padding="@dimen/edittext_padding_default" />

                    <Button
                        android:id="@+id/button_calander"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_add_post_calender"
                        android:padding="@dimen/edittext_padding_default"
                        android:text="YYYY-mm-DD"
                        android:textAlignment="textStart"
                        android:textAllCaps="false"
                        android:textColor="@color/default_text_color"
                        android:textSize="8pt"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/text_calendar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/edittext_default_padding"
                        android:text="@string/activity_add_post_date_sub" />

                    <Button
                        android:id="@+id/button_place"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_add_post_calender"
                        android:padding="@dimen/edittext_padding_default"
                        android:text="@string/activity_add_post_place_btn"
                        android:textAlignment="textStart"
                        android:textAllCaps="false"
                        android:textColor="@color/default_text_color"
                        android:textSize="8pt"
                        android:textStyle="normal" />

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:id="@+id/layout_place_prediction"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:gravity="left"
                            android:orientation="horizontal"
                            android:padding="0dp" />

                    </HorizontalScrollView>

                    <TextView
                        android:id="@+id/text_place"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/activity_add_post_place_sub" />

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>