<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MypageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_header"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/header_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text=" "
                android:textAllCaps="false"
                android:textColor="@color/app_main_color"
                android:textSize="@dimen/app_header_fontsize"
                android:visibility="visible" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/settingButton"
                android:layout_width="@dimen/app_header_btn_size"
                android:layout_height="@dimen/app_header_btn_size"
                android:background="@color/white"
                app:srcCompat="@android:drawable/ic_lock_power_off" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider" />

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bottom"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal"
            android:divider="@color/default_text_color">

            <Button
                android:id="@+id/feedButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="@dimen/app_bottom_padding_top"
                android:paddingBottom="@dimen/app_bottom_padding_bottom"
                android:paddingLeft="@dimen/app_bottom_padding_left"
                android:paddingRight="@dimen/app_bottom_padding_right"
                android:background="@color/white"
                android:text="@string/bottom_feed"
                android:textSize="@dimen/app_bottom_fontsize"
                android:drawableTop="@drawable/btn_bottom_feed" />

            <Button
                android:id="@+id/searchButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="@dimen/app_bottom_padding_top"
                android:paddingBottom="@dimen/app_bottom_padding_bottom"
                android:paddingLeft="@dimen/app_bottom_padding_left"
                android:paddingRight="@dimen/app_bottom_padding_right"
                android:background="@color/white"
                android:text="@string/bottom_search"
                android:textSize="@dimen/app_bottom_fontsize"
                android:drawableTop="@drawable/btn_bottom_search" />

            <Button
                android:id="@+id/writeButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="@dimen/app_bottom_padding_top"
                android:paddingBottom="@dimen/app_bottom_padding_bottom"
                android:paddingLeft="@dimen/app_bottom_padding_left"
                android:paddingRight="@dimen/app_bottom_padding_right"
                android:background="@color/white"
                android:text="@string/bottom_write"
                android:textSize="@dimen/app_bottom_fontsize"
                android:drawableTop="@drawable/btn_bottom_write" />

            <Button
                android:id="@+id/folderButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="@dimen/app_bottom_padding_top"
                android:paddingBottom="@dimen/app_bottom_padding_bottom"
                android:paddingLeft="@dimen/app_bottom_padding_left"
                android:paddingRight="@dimen/app_bottom_padding_right"
                android:background="@color/white"
                android:text="@string/bottom_folder"
                android:textSize="@dimen/app_bottom_fontsize"
                android:drawableTop="@drawable/btn_bottom_folder" />

            <Button
                android:id="@+id/mypageButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="@dimen/app_bottom_padding_top"
                android:paddingBottom="@dimen/app_bottom_padding_bottom"
                android:paddingLeft="@dimen/app_bottom_padding_left"
                android:paddingRight="@dimen/app_bottom_padding_right"
                android:background="@color/white"
                android:text="@string/bottom_mypage"
                android:textSize="@dimen/app_bottom_fontsize"
                android:textColor="@color/app_main_color"
                android:drawableTop="@drawable/btn_bottom_mypage_selected" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>